--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <h1>My Personal Webpage</h1>
 <h2>By John Donnal</h2>
+<p>Here is a picture of my school:</p>
+<img src="crestz.png" alt="USNA crest">
+<a href="https://usna.edu">My School</a>
+<a href="aboutme.html">Learn all about me</a>
